--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Tech 224{% endblock %}</title>
+    <title> Tech 224-{% block title %}{% endblock %}</title>
     <!-- Inclure le fichier CSS de Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Votre propre fichier CSS -->
@@ -12,6 +12,10 @@
 </head>
 <body>
 
+    
+{% block navbar %}
+        
+        
 <!-- Barre de navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -27,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="{% static 'img_for_link/home.jpeg' %}" alt="Home" width="20" class="me-1">Home</a>
+                    <a class="nav-link" href="{% url 'blog:home' %}"><img src="{% static 'img_for_link/home.jpeg' %}" alt="Home" width="20" class="me-1">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><img src="{% static 'img_for_link/blog.jpeg' %}" alt="Blog" width="20" class="me-1">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="{% static 'img_for_link/profile.jpeg'' %}" alt="Profile" width="20" class="me-1">Profile</a>
+                    <a class="nav-link" href="{% url 'blog:profile' %}"><img src="{% static 'img_for_link/profile.jpeg'' %}" alt="Profile" width="20" class="me-1">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><img src="{% static 'img_for_link/forum.jpeg'' %}" alt="Forum" width="20" class="me-1">Forum</a>
@@ -48,8 +52,11 @@
         </div>
     </div>
 </nav>
+{% endblock navbar %}
 
 <!-- Contenu principal -->
+{% block sidebar %}
+
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
@@ -57,7 +64,7 @@
             <div class="position-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
+                        <a class="nav-link active" aria-current="page" href="{% url 'blog:cours' %}">
                             <img src="{% static 'img_for_link/cours.png' %}" alt="Cours" width="30" class="me-1">
                             Cours
                         </a>
@@ -77,7 +84,9 @@
                 </ul>
             </div>
         </nav>
-        
+
+{% endblock sidebar %}
+
         <!-- Contenu de la page -->
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             {% block content %}
